infra/k8s/webstore-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webstore-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webstore
  template:
    metadata:
      labels:
        app: webstore
    spec:
      containers:
        - name: webstore
          image: milovicvojin/webstore
---
apiVersion: v1
kind: Service
metadata:
  name: webstore-srv
spec:
  selector:
    app: webstore
  ports:
    - name: webstore
      protocol: TCP
      port: 3000
      targetPort: 3000
