infra/k8s/webstore-mongo-depl (copy).yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-depl
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres
      app.kubernetes.io/component: backend
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres
        app.kubernetes.io/component: backend
    spec:
      containers:
        - name: postgres
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: auth-provider-postgres-srv
spec:
  selector:
    app: postgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
